* better slide in/out for sidebars * fixed missing 1 pixel column when sidebar is collapsed * fixed bottom margin funniness with categories/tags bottombar

--- a/style.css
+++ b/style.css
@@ -167,6 +167,7 @@ BLOCKQUOTE OL
 {
     margin: 60px auto 60px auto;
     width: 90%;
+    border-collapse: collapse;
     border-radius: 30px; 
     -webkit-border-radius: 30px;
     -moz-border-radius: 30px; 
@@ -698,7 +699,7 @@ LEGEND A,
 .postmetadata
 {
     text-align: left;
-    padding: 8px 10px 32px 10px;
+    padding: 8px 10px 0px 10px;
     background-color: #eeeeee;
     margin: 0px;
     margin-left: -15px; /* see hack for Firefox in .post fieldset above */
@@ -739,7 +740,7 @@ LEGEND A,
 .postcattags
 {
     padding: 4px 10px 8px 10px;
-    margin: 4px 10px 0px 10px;
+    margin: 4px 10px 15px 10px;
     background-color: #ffffff;
     color: #442222;
     border-radius: 12px; 
@@ -760,21 +761,22 @@ LEGEND A,
     -webkit-border-radius: 5px;
 }
 
-.postcats
+.postcats,
+.posttags
 {
-    background-image: URL('images/cat2.png');
     background-position: 3% 50%;
     padding: 5px 35px 5px 45px;
     background-repeat: no-repeat;
 }
 
+.postcats
+{
+    background-image: URL('images/cat2.png');
+}
+
 .posttags
 {
-    margin-top: 15px;
     background-image: URL('images/tag2.png');
-    background-position: 3% 50%;
-    padding: 5px 35px 5px 45px;
-    background-repeat: no-repeat;
 }
 
 #single .postcattags
